cmake_minimum_required(VERSION 4.1)
project(METROPOLIA_CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(METROPOLIA_CPP exercise_01.cpp
        exercise_02.cpp
        exercise_03.cpp
        exercise_04.cpp
        exercise_05.cpp
        exercise_06.cpp
        exercise_07.cpp
        exercise_08.cpp
        exercise_09.cpp
        exercise_10.cpp
        exercise_11.cpp
        exercise_12.cpp)
