cmake_minimum_required(VERSION 4.1)
project(METROPOLIA_CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(METROPOLIA_CPP exercise_01.c
        exercise_02.c
        exercise_03.c
        exercise_04.c
        exercise_05.c
        exercise_06.c
        exercise_07.c
        exercise_08.c
        exercise_09.c
        exercise_10.c
        exercise_11.c
        exercise_12.c)
